Fix for cut off bottom of chat bar

--- a/client/layout/pages/room/_ads.scss
+++ b/client/layout/pages/room/_ads.scss
@@ -1,6 +1,7 @@
 .ad-banner-nb {
     position: relative;
     display: flex;
+    flex: 1 0 auto;
     align-items: flex-start;
     background: #ffe49d;
 
