--- a/client/layout/pages/room/_detail-bar.scss
+++ b/client/layout/pages/room/_detail-bar.scss
@@ -1,5 +1,7 @@
 .detail-bar {
     position: absolute;
+    display: flex;
+    flex-direction: column;
     width: $detail-bar-width;
     top: 0;
     bottom: 0;
